# E-commerce-Smart-Agent

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  architecture.md  celery_worker.py  docker-compose.monitoring.yml  docker-compose.yaml  pyproject.toml  resume.md  start.sh  start_worker.sh  temp.py
.claude/: CLAUDE.md
.serena/: project.yml
alertmanager/: alertmanager.yml
app/: celery_app.py  main.py
configs/: filebeat.yml  fluentd.conf
data/: adversarial_test_cases.jsonl  golden_dataset_v2.jsonl  products.json  return_policy.md  shipping_policy.md
docs/: README.md  adr.md  api.md  confidence-multiagent-implementation.md  context-engineering-roadmap.md  deployment.md  development.md  ops-manual.md  performance-optimization.md  prompt-engineering-roadmap.md  resume-guide.md  todo.md  user-manual.md
frontend/: .env.example  admin.html  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
migrations/: env.py
mimir/: mimir.yml  runtime.yml
otel/: otel-collector-config.yml
prometheus/: alert_rules.yml  prometheus.yml  recording_rules.yml
promtail/: promtail-config.yml
scripts/: adversarial_run.py  deploy-monitoring.sh  etl_policy.py  etl_qdrant.py  generate_few_shot_examples.py  generate_golden_v2.py  migrate_alerts.py  run_evaluation.py  seed_data.py  seed_large_data.py  seed_product_catalog.py  validate-monitoring.sh  validate_mimir.py  verify_db.py
tempo/: tempo.yml
test/: test_api_complete.py  test_infra.py  test_refund_rules.py  test_refund_subgraph.py  test_users.py  test_v1_agent.py  test_v2_logic.py  test_v4_complete.py
tests/: AGENTS.md  _agents.py  _db_config.py  _llm.py  _reranker.py  conftest.py  test_admin_api.py  test_admin_service.py  test_auth_api.py  test_auth_rate_limit.py  test_auth_service.py  test_chat_api.py  test_chat_utils.py  test_confidence_signals.py  test_context_isolation.py  test_email.py  test_evaluation_tasks.py  test_experiment_assigner.py  test_users.py  (+18 more)
(+560 files in other folders)
